--- a/dockerfiles/s3lambda/dockerfile
+++ b/dockerfiles/s3lambda/dockerfile
@@ -1,12 +1,9 @@
 
-
-
-
 FROM public.ecr.aws/lambda/python:3.12
 
 COPY src/s3_lambda/app.py ${LAMBDA_TASK_ROOT}
 
-COPY src/s3_lambda/requirements.txt
+COPY src/s3_lambda/requirements.txt .
 RUN pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 CMD ["app.handler"]
